--- a/public/modules/jot/views/datepicker.html
+++ b/public/modules/jot/views/datepicker.html
@@ -1,6 +1,7 @@
- <div class="col-md-3 pull-left date_due" >
+ <div class="col-md-3 pull-left date_due EditMode" ng-controller="dueDataCtlr">
     <md-input-container md-no-float class="md-block">
         <label>Set Due Date</label>
-        <md-datepicker md-open-on-focus md-hide-icons="all" ng-model="outsource.due_date" string-to-timestamp></md-datepicker>
+        <md-datepicker md-open-on-focus md-hide-icons="all" ng-model="$root.due_date" string-to-timestamp></md-datepicker>
     </md-input-container>
 </div>
+
