--- a/public/modules/jot/views/department.html
+++ b/public/modules/jot/views/department.html
@@ -1,13 +1,11 @@
-<div class="col-md-12" ng-controller="departmentCtlr">
-    <md-input-container md-no-float class="md-block">
-        <input  ng-model="outsource.department" placeholder="# Tag a Room, Department Name, Assign Name  ">
-    </md-input-container>
-    <ul class="tag_room_list clearfix mar-bot20">
-        <li>metting</li>
-        <li>metting</li>
-        <li>metting</li>
-        <li>metting</li>
-        <li>metting</li>
-        <li>metting</li>
-    </ul>
+<div class="EditMode" style="position:relative" ng-controller="departmentCtlr">
+    <div class="col-md-12">
+        <md-input-container md-no-float class="md-block">
+            <input  ng-model="$root.department" focus-department="deparmentfocus" placeholder="# Tag a Room, Department Name, Assign Name" autocomplete="off" id="department" departmentypeahead="departmentSuggetionList" departmenttypeahead-callback="callback">
+
+            </md-input-container>   
+    </div>
+    
 </div>
+
+
