--- a/public/modules/jot/views/issue.html
+++ b/public/modules/jot/views/issue.html
@@ -1,3 +1,4 @@
+<div class="clearfix" ng-include="'/modules/jot/views/priority.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/datepicker.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/staff.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/department.html'"></div>
