--- a/public/modules/jot/views/quick.html
+++ b/public/modules/jot/views/quick.html
@@ -1,3 +1,4 @@
+<div class="clearfix" ng-include="'/modules/jot/views/priority.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/datepicker.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/staff.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/department.html'"></div>
@@ -7,10 +8,10 @@
     <div class="jot_prity_txt">Jot Type: </div>
     <ul class="Jot_type clearfix">	
 
-        <li ng-repeat="jotType in jotList">
-             <a href="javascript:void(0);" ng-class="{active : jot_type === jotType.name}" ng-click='jotSelect($event,jotType.name)'>{{jotType.name}}</a>            
+        <li ng-repeat="(jotKey,jotValue) in $root.jotTypes">
+             <a href="javascript:void(0);" ng-class="{active : $root.jot_type === jotKey}" ng-click='jotSelect($event,jotKey)'>{{jotValue.label}}</a>            
          </li>
     </ul>   
     </div>
-   <input type="hidden" name="jot_type" value="{{jot_type}}" ng-model="jot_type"> 
+   <input type="hidden" name="jot_type" value="{{$root.jot_type}}" ng-model="$root.jot_type"> 
 </div>
