--- a/public/modules/jot/views/task.html
+++ b/public/modules/jot/views/task.html
@@ -1,3 +1,4 @@
+<div class="clearfix" ng-include="'/modules/jot/views/priority.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/task_datepicker.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/staff.html'"></div>
 <div class="clearfix" ng-include="'/modules/jot/views/department.html'"></div>
@@ -5,8 +6,8 @@
 	<div class="col-md-12">
 	    <div class="clearfix" ng-include="'/modules/jot/views/checklist.html'"></div>
 	    <div class="clearfix" ng-include="'/modules/jot/views/image.html'"></div>
-	</div>
-    <input type="hidden" name="jot_type" value="{{jot_type}}" ng-model="jot_type"> 
+	</div> 
+	<input type="hidden" name="jot_type" value="{{jot_type}}" ng-model="jot_type">   
 </div>
 
 
