--- a/public/assets/css/layout.style.css
+++ b/public/assets/css/layout.style.css
@@ -2,6 +2,8 @@
 * {margin:0; padding:0; outline:0; box-sizing:border-box; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -o-box-sizing:border-box; -ms-box-sizing:border-box;}
 html, body {width:100%; height:100%;}
 body {font-family: 'Open Sans', sans-serif; font-size:14px; line-height:normal; color:#222222; background:#ffffff;}
+a, a:focus , input, button , select, textrea{outline:none; text-decoration:none!important; color:#333; }
+.width100{width: 100%;}
 md-dialog.md-default-theme, md-dialog{border-radius: 0;}
 md-checkbox.md-checked .md-icon {background-color: rgba(255,187,66,1)!important;}
 ul {padding:0; margin:0; list-style:none;}
@@ -17,14 +19,43 @@ md-input-container .md-errors-spacer{min-height: 17px;}
 	left: 0;
 	right: 0;
 	z-index: 1;
-
 }
 bx-slider{
 	position: relative;    display: block;
 }
+.mainhd{font-size: 36px; color: #000; font-weight: 800; margin-bottom: 10px;}
+.mainsubhd{font-size: 15px; color: #7b7b7b; font-style: italic; margin-bottom: 20px;}
 .frontheder{width: 100%; padding:10px;}
+.front_hrader_menu {padding: 15px 0; }
 .frontnav ul > li{float: left; padding: 0 17px; }
-.frontnav ul > li > a{display: block; font-weight: 600; font-size: 15px; color: #737681; text-transform: uppercase;}
+.frontnav ul > li > a{display: block; font-weight: 600; line-height: 35px; font-size: 15px; color: #737681; text-transform: uppercase;}
 .frontnav ul > li > a:hover, .frontnav > li > a:focus{text-decoration: none;}
 .frontnav_login ul > li {float: left; margin-left: 10px;}
-.frontnav_login ul > li > a{font-size: 15px; color: #484e64;}
+.frontnav_login ul > li > a{font-size: 15px;border: 1px solid #c0c0c0; padding: 7px 20px; font-weight: 600; color: #484e64; line-height: 35px;}
+.frontnav_login ul > li > a:hover, .frontnav_login ul > li > a:hover, .frontnav_login ul > li > a.active{background: #ffbb42; color: #fff; border: 1px solid #ffbb42; text-decoration: none; }
+.mobile-menu_div{display:none;  position: absolute;right: 10px;top: 0; }
+.mobile-menu {text-align: left;width: 35px;outline: none; margin:0px auto;   position:relative; display:block; margin-top:30px;  height: 30px;}
+.mobile-menu.openleftmenu span:first-child{transform: rotate(42deg) translate(6px, 8px);}
+.mobile-menu.openleftmenu span:last-child{transform: rotate(-43deg) translate(7px, -9px);}
+.mobile-menu.openleftmenu span:nth-child(2){opacity:0;}
+.mobile-menu span{ width: 35px;height: 5px;background:#ffbb42;display:block; -webkit-transition:ease-in-out .5s; -moz-transition:ease-in-out .5s; -ms-transition:ease-in-out .5s; -o-transition:ease-in-out .5s; transition:ease-in-out .5s; }
+.mobile-menu span:nth-child(2){ margin:6px 0;}
+
+.frontfoter{padding:0 10px 10px; background: #fff;}
+.frontfoter_inner{padding: 45px; background: url('../../images/footer_bg.jpg') 0 0 no-repeat; background-size: cover;}
+.leftfotter{float: left; width: calc(100% - 330px); padding-right: 30px;}
+.rightfotter{width: 320px; float: right;}
+.rightfotter h4{color: #fff; font-size: 15px; margin: 20px 0 20px; text-transform: uppercase;}
+.fottertxt{color: #8c8c8c; margin: 10px 0 20px 0; line-height: 24px;}
+.getsocilahd{text-transform: uppercase; color: #fff;font-weight: 600; font-size: 16px; margin-bottom: 5px;}
+.getsocila ul > li {float: left;}
+.getsocila ul > li:first-child{margin-left: -7px;}
+.getsocila ul > li > a{color: #bbbbbb}
+.getsocila ul > li > a:hover{color: #ffbb42}
+.getsocila ul > li > a ng-md-icon{width: 30px; height: 30px; margin-right: 5px;} 
+.fotter_links ul > li{float: left; margin-bottom: 10px; width: 50%; }
+.fotter_links ul > li:nth-child(2n){margin-right: 0;}
+.fotter_links ul > li > a{display: block; padding-left: 10px; position: relative; color: #8c8c8c; font-size: 12px; text-transform: uppercase;}
+.fotter_links ul > li > a:hover, .fotter_links ul > li > a:focus{color: #ffbb42; text-decoration: none;}
+.fotter_links ul > li > a:after{ content: ''; position: absolute; width: 4px; height: 4px; border-radius: 5px; -webkit-border-radius: 5px; background: #8c8c8c; top: 0; left: 0; bottom: 0; margin: auto;}
+.fotter_links ul > li > a:hover:after, .fotter_links ul > li > a:focus:after{background:#ffbb42;}
