--- a/public/assets/css/mobile.style.css
+++ b/public/assets/css/mobile.style.css
@@ -1,17 +1,66 @@
+@media(max-width:1400px){
+.About_banner h4{padding: 80px 0;}
+}
 @media(max-width:1200px){
+.frontnav ul > li{padding: 0 10px;}
+.frontnav ul > li > a{font-size: 14px;}
+.map_cicle{top: 14%;left: 18%;}
+.frontfoter_inner{padding: 45px 0;}
 }
 
 @media(max-width:1023px){
-	.login_content{width: auto;}
-	.leftlogbg, .rightlogin{width: 100%; float: none; height: auto;}
+.login_content{width: auto;}
+.leftlogbg, .rightlogin{width: 100%; float: none; height: auto;}
+}
+@media(max-width:970px){
+.conctleft{width: 280px;}
+.conctright { width: calc(100% - 280px);}
+.absdress{top: 63px;left: -15px;}
+.absdress::after {	border-width: 0px 7.5px 10px 7.5px;	border-color: transparent  transparent #fff transparent;	right: auto;	margin: auto;	top: -9px;	left: 27px;}
+.frontnav_login ul > li > a{padding: 5px 15px;}
+.frontnav {transition:all 0.5s ease; -ms-transition:all 0.5s; -webkit-transition:all 0.5s; -o-transition:all 0.5s; -moz-transition:all 0.5s ;padding: 15px 10px;position: fixed;left: -260px;width: 260px; overflow: auto; top: 0;bottom: 0;height: 100%;background: #222;z-index: 99;}
+.frontnav.openleftmenu{left: 0;}
+.frontnav ul > li{float: none;}
+.frontnav ul > li > a{color: #fff;}
+.frontnav_login{padding-right: 45px;}
+.mobile-menu_div{display: block;}
+.About_banner h4{font-size: 30px; padding: 50px 0;}
+.aboutpanel {padding: 25px 15px;}
+.demovidpanel  .aboutpanel {padding: 25px 0px;}
+.aboutpanel_blk{padding: 25px 15px;}
+.mainhd{font-size: 26px; margin-bottom: 5px;}
+.mainsubhd{margin-bottom: 10px;}
+.about_img_lay{padding: 35px 0 15px 0;}
+.expert_con {padding: 45px 15px 0 15px;}
+.static_middle_inner{margin: 0;}
+.static_middle_inner.demopad300{margin-bottom: -177px;}
 }
 @media(max-width:767px){
-	md-dialog {max-width: 100% !important;width: 100%;height: 100%;max-height: 100% !important;}
-	.edit_water_left{width: 100%; float: none; margin-bottom: 20px;}
-	.edit_water_right{idth: 100%; float: none;}
+md-dialog {max-width: 100% !important;width: 100%;height: 100%;max-height: 100% !important;}
+.edit_water_left{width: 100%; float: none; margin-bottom: 20px;}
+.edit_water_right{idth: 100%; float: none;}
+.conctleft{width: 100%;  float: none;}
+.map_cicle{top: 7%;}
+.conctright, .leftfotter { width: 100%; float: none; padding-right: 0;}
+.contactpanel{padding: 20px 15px;}
+.absdress{width: 270px;left: -45px;  height: 153px;}
+.absdress::after{left: 60px;}
+.absdresslist > li{padding: 10px;}
+.static_middle, .frontfoter{padding: 0;}
+.About_banner h4 {font-size: 24px; padding: 45px 0;}
+.frontfoter_inner{padding: 20px 0;}
+.rightfotter{width: 100%; float: none;}
+.fotter_links ul > li > a{font-size: 11px;}
+.expert_con_list > li {width: 32%; margin-right: 2%; margin-bottom: 20px;}
+.expert_con_list > li:nth-child(4n){margin-right: 2%;}
+.expert_con_list > li:nth-child(3n){margin-right: 0;}
+.demoform{padding: 20px 10px;}
+.vid_icon{width: 60px; height: 60px;}
+.vid_icon img{width: 100%;}
 }
-
 @media(max-width:479px){
+.mainhd{font-size: 22px;}	
+.about_txt{font-size: 14px; line-height: 23px;}
 .leftlogbg, .rightlogin{padding: 15px 10px;}
 .loginHd{font-size: 22px;}
 .loginHd p{font-size: 14px;}
@@ -28,4 +77,19 @@
 .newhotel_dialog_form .date_due md-input-container .md-input{width: 100%;}
 .date_due{width: 100%; float: none!important; }
 .newhotel_dialog_form .date_due .md-datepicker-input-container{width: 100%;}
+.yellowlogo img{width: 110px;}
+.front_hrader_menu{padding: 4px 0 0 0;}
+.frontnav_login ul > li{margin-left: 5px;}
+.frontnav_login ul > li > a{font-size: 11px; padding: 6px 5px;}
+.mobile-menu{margin-top: 20px;width: 30px}
+.mobile-menu span{height: 4px; width: 30px}
+.frontnav_login{padding-right: 35px;}
+.mobile-menu.openleftmenu span:first-child{transform: rotate(42deg) translate(5px, 7px);}
+.expert_con_list > li {width: 49%; margin-right: 2%; margin-bottom: 20px;}
+.expert_con_list > li:nth-child(4n){margin-right: 2%;}
+.expert_con_list > li:nth-child(3n){margin-right: 2%;}
+.expert_con_list > li:nth-child(2n){margin-right: 0;}
+.expert_con{padding: 45px 0 0 0; }
+.hoversec .expertname{font-size: 15px;}
+.hoversec span{font-size: 12px; text-align: center;;}
 }
